<resources>
    <string name="app_name">百度手机卫士</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="notify_system_share_title">分享</string>
    <string name="splash_ok">立即体验</string>
    <string name="dialog_ok">立即体验</string>
    <string name="download_complete">下载完成</string>
    <string name="download_failed">下载失败</string>
    <string name="notify_system_pandora_start_error">打开失败</string>
    <string name="yhds_engine_perm_common_label">百度手机卫士SDK</string>
    <string name="yhds_engine_perm_common_desc">百度手机卫士SDK调用权限</string>
    <string name="fp_tip">提示</string>
    <string name="fp_ok">确定</string>
    <string name="fp_cancel">取消</string>
    <string name="fp_exit">退出</string>
    <string name="fp_setting">设置</string>
    <string name="fp_img">Image</string>
    <string name="fp_loading">加载中…</string>
    <string name="fp_pay_fail_help">"%s
更多问题请致电 400–8988–855"</string>
    <string name="fp_error_exit">程序异常，请退出后重试。</string>
    <string name="fp_request_error">网络请求失败，请重试。</string>
    <string name="fp_get_data_fail">获取数据失败</string>
    <string name="fp_no_network">网络错误，请检查网络并重试。</string>
    <string name="fp_wrong_number">手机号码格式不正确</string>
    <string name="fp_confirm_exit">"退出百度钱包会放弃当前交易。
您确定要退出吗？"</string>
    <string name="fp_protocol">&lt;&lt;百付宝快捷支付协议>></string>
    <string name="fp_statement">由 百度钱包 提供支付服务</string>
    <string name="fp_fail_get_order">获取订单信息失败，请重试。</string>
    <string name="fp_get_banks_fail">获取银行列表失败</string>
    <string name="fp_paying">百度手机卫士安全支付中…</string>
    <string name="fp_mobile_no">充值号码：</string>
    <string name="fp_face_tip">充值金额：</string>
    <string name="fp_price_tip">实付金额：</string>
    <string name="fp_price">%1$s 元</string>
    <string name="fp_card_no">卡号</string>
    <string name="fp_card_tip">银行卡号</string>
    <string name="fp_error_card_len">卡号长度不正确，请重新填写</string>
    <string name="fp_bank_bind_phone">手机号</string>
    <string name="fp_bank_phone">银行预留手机号</string>
    <string name="fp_argree">同意</string>
    <string name="fp_submit_pay">确认支付</string>
    <string name="fp_input_sms_code">验证码</string>
    <string name="fp_error_phone">手机号格式不正确，请重新填写</string>
    <string name="fp_resend">%1$d秒后重新发送</string>
    <string name="fp_get_sms_code">获取短信验证码</string>
    <string name="fp_sms_sent">验证码已发送</string>
    <string name="fp_send_fail">验证码发送失败</string>
    <string name="fp_error_cer">验证码格式不正确，请重新填写</string>
    <string name="fp_error_cer_">验证码错误，或已经过期</string>
    <string name="ebpay_confirm_exit_fast">您确定要退出快捷支付页面吗？</string>
    <string name="fp_time_out">本次支付超出了正常交易时间，可能已经失败。</string>
    <string name="fp_credit_card">信用卡</string>
    <string name="fp_choose_credit_tip">支持工、招、建等银行，</string>
    <string name="fp_show_all">查看全部</string>
    <string name="fp_valid_date">有效期</string>
    <string name="fp_year_month">月/年（例如0816）</string>
    <string name="fp_error_date">卡有效期格式不正确</string>
    <string name="fp_format_date">卡有效期格式不正确，请重新填写</string>
    <string name="fp_error_cvv">卡背末三位数格式不正确，请重新填写</string>
    <string name="fp_card_end_dim">卡背末三位数</string>
    <string name="fp_bank_cvv2">CVV2</string>
    <string name="fp_supported_credits">信用卡支持</string>
    <string name="fp_supported_credits_detail">支持工、招、建等银行信用卡</string>
    <string name="fp_reget_debits">点击重新获取</string>
    <string name="fp_querying_bank_list">查询银行列表中…</string>
    <string name="fp_support_debits">目前支持%1$s家银行卡</string>
    <string name="fp_debit_card">储蓄卡</string>
    <string name="fp_pay_bank">支付银行</string>
    <string name="fp_select_bank">选择支付银行</string>
    <string name="fp_select_bank2">请选择支付银行</string>
    <string name="fp_name">姓名</string>
    <string name="fp_true_name">持卡人姓名</string>
    <string name="fp_id_card">身份证号</string>
    <string name="fp_error_name">持卡人姓名格式不正确，请重新填写</string>
    <string name="fp_error_id">身份证格式不正确，请重新填写</string>
    <string name="fp_pay_success">支付成功!</string>
    <string name="fp_pay_fail">支付失败!</string>
    <string name="fp_pay_cancel">支付取消</string>
    <string name="app_name_short">百度卫士</string>
    <string name="app_name_beta">百度手机卫士(内测版)</string>
    <string name="common_system_setting">系统设置</string>
    <string name="common_dialog_title_tip">百度手机卫士提示</string>
    <string name="common_dialog_title_safety_tip">百度手机卫士安全提示</string>
    <string name="common_msg_no_prompt_again">不再提示</string>
    <string name="common_msg_no_requried_apps">没有相应的应用程序</string>
    <string name="common_msg_app_cannot_launch">无法打开此应用程序</string>
    <string name="common_msg_app_cannot_launch_freezed">该应用被冻结，取消冻结后即可使用</string>
    <string name="common_msg_root_dialog_tips">"获取root权限的手机将可以：
%1$s"</string>
    <string name="common_msg_beta_tips">内测版本，可能含有部分bug，欢迎反馈</string>
    <string name="common_msg_no_network_available">网络当前不可用，请检查网络设置！</string>
    <string name="common_msg_click_view_details">点击查看详情</string>
    <string name="common_no_network_click_refresh">没有连接网络，联网后点击图标进行刷新</string>
    <string name="common_info_storage_all_sd">可用空间：手机%1$s，SD卡%2$s</string>
    <string name="common_info_storage_all_buildin_external">可用空间：手机%1$s，外部存储%2$s</string>
    <string name="common_info_storage_internal_only">可用空间：手机%1$s</string>
    <string name="common_info_apk_occupy">占用:%1$s</string>
    <string name="common_info_apk_size">大小:%1$s</string>
    <string name="common_info_apk_version">版本:%1$s</string>
    <string name="common_time_hour">小时</string>
    <string name="common_time_minute">分</string>
    <string name="common_time_second">秒</string>
    <string name="common_state_on">开</string>
    <string name="common_state_off">关</string>
    <string name="common_state_supported">支持</string>
    <string name="common_state_not_supported">不支持</string>
    <string name="common_email_client_not_found">无法打开邮件客户端</string>
    <string name="common_install_apk_not_found">无法找到安装包</string>
    <string name="common_install_apk_not_found_and_redownload">无法找到安装包，正在下载最新安装包</string>
    <string name="common_install_apk_file_parse_error">无法解析安装包</string>
    <string name="common_install_system_app_inconsistent_cert">软件签名不一致，无法升级系统应用</string>
    <string name="common_install_action_continue">继续安装</string>
    <string name="antispam_title">防骚扰</string>
    <string name="antispam_summary">拦截骚扰电话、垃圾短信</string>
    <string name="antispam_settings_personal">拦截个性设置</string>
    <string name="antispam_pref_black_list">黑名单</string>
    <string name="antispam_pref_white_list">白名单</string>
    <string name="antispam_pref_sms_keywords">短信拦截关键词</string>
    <string name="antispam_settings_general">拦截通用设置</string>
    <string name="antispam_pref_antispam_on">开启骚扰拦截</string>
    <string name="antispam_pref_antispam_notify_on">拦截通知提示</string>
    <string name="antispam_pref_antispam_notify_on_sum">拦截来电和短信时发送通知提示</string>
    <string name="antispam_pref_mode">拦截规则</string>
    <string name="antispam_pref_schedule">定时拦截设置</string>
    <string name="antispam_pref_response">拦截返回音</string>
    <string name="antispam_settings_calling">来去电显示</string>
    <string name="antispam_pref_floatwin">来去电悬浮窗</string>
    <string name="antispam_pref_floatwin_sum">显示号码归属地和标记信息</string>
    <string name="antispam_pref_reportwin">标记提示框</string>
    <string name="antispam_pref_reportwin_sum">举报陌生号码，让骚扰不打扰他人</string>
    <string name="antispam_pref_data">数据更新</string>
    <string name="antispam_miui_setting_title">MIUI骚扰拦截帮助</string>
    <string name="antispam_miui_setting_spam_sms">如何开启拦截垃圾短信</string>
    <string name="antispam_miui_setting_spam_sms_summary">开启拦截垃圾短信，拦截效果行业领先</string>
    <string name="antispam_miui_setting_show_floating_view">如何开启来去电悬浮窗</string>
    <string name="antispam_miui_setting_spam_sms_step_1">1.打开MIUI桌面上“安全中心”或“系统与安全”文件夹，选择“授权管理”</string>
    <string name="antispam_miui_setting_spam_sms_step_2">2.在“授权管理”中打开“程序”，点击百度手机卫士，开启“我信任该程序”开关，选择信任百度手机卫士</string>
    <string name="antispam_miui_setting_spam_sms_step_3">3.打开MIUI系统的短信界面</string>
    <string name="antispam_miui_setting_spam_sms_step_4">4.点击系统菜单，选择“设置”</string>
    <string name="antispam_miui_setting_spam_sms_step_5">5.在设置界面底部，选择“高级设置”</string>
    <string name="antispam_miui_setting_spam_sms_step_6">6.关闭系统短信优先开关，允许第三方应用先截获短信通知</string>
    <string name="antispam_miui_setting_spam_sms_step_7">7.完成设置。让百度手机卫士为你拦截垃圾短信</string>
    <string name="antispam_mizu_setting_title">魅族手机骚扰拦截帮助</string>
    <string name="antispam_mizu_setting">如何开启骚扰拦截功能</string>
    <string name="billguard_prevent_cheat_open_smart_block">开启智能防诈骗</string>
    <string name="billguard_prevent_cheat_open_smart_block_tips">拦截诈骗短信，远离诈骗威胁</string>
    <string name="billguard_prevent_cheat_settings_notifycation">防诈骗通知提示</string>
    <string name="billguard_prevent_cheat_settings_notifycation_tips">及时提示诈骗短信，提示吸费风险</string>
    <string name="billguard_prevent_cheat_white_list">白名单</string>
    <string name="billguard_prevent_cheat_white_list_tips">白名单中的号码不会被拦截</string>
    <string name="netmonitor_flowwinon">开启流量悬浮窗</string>
    <string name="netmonitor_list_filter">列表过滤</string>
    <string name="netmonitor_hide_theremin">自动隐藏</string>
    <string name="netmonitor_wifi_hide">WIFI下隐藏悬浮窗</string>
    <string name="netmonitor_only_on_home">仅在桌面显示悬浮窗</string>
    <string name="netmonitor_info_hide">悬浮窗将在无网络时自动隐藏</string>
    <string name="netmonitor_info_onemin">悬浮窗将在持续无流量时自动隐藏</string>
    <string name="netmonitor_pinlock">悬浮窗锁定</string>
    <string name="netmonitor_pinlock_sum">防止误碰，锁定后无法查看当前联网应用</string>
    <string name="netmonitor_list_filter_info">列表中不显示速度为零的应用</string>
    <string name="netmonitor_wifi_hide_info">连接WIFI时不显示流量悬浮窗</string>
    <string name="netmonitor_only_on_home_info">在其他应用界面时不显示悬浮窗</string>
    <string name="anti_netflow_open_monitor">立即开启</string>
    <string name="netflow_open_monitor_info">开启防偷跑工具需要开启流量监控</string>
    <string name="anti_netflow_open_monitor_info">使用下列功能需要开启流量监控</string>
    <string name="netflow_lockscreen">锁屏耗流量提示</string>
    <string name="netflow_night">夜间耗流量提示</string>
    <string name="netflow_background">后台流量提示</string>
    <string name="netflow_background_info">监控异常消耗的2/3/4G流量</string>
    <string name="netflow_background_trust_list">信任名单</string>
    <string name="netflow_background_trust_list_info">该名单下应用不再被监控</string>
    <string name="netflow_background_threshold">后台流量提示限值</string>
    <string name="netflow_background_threshold_info">应用后台流量消耗达到限值时提醒</string>
    <string name="netflow_live">流量播报</string>
    <string name="netflow_live_info">实时了解流量消耗</string>
    <string name="netflow_live_settings">设置</string>
    <string name="night_escape">夜间防偷跑</string>
    <string name="night_escape_info">夜间定时断网，睡眠更安心</string>
    <string name="night_escape_info_summery">当前断网时间为 %1$s-%2$s</string>
    <string name="night_escape_settings">设置断网/联网时段</string>
    <string name="large_net_traffic_lock">恶意耗流量管控</string>
    <string name="large_net_traffic_lock_info">应用消耗大量流量时自动断网，保护流量安全</string>
    <string name="large_net_traffic_lock_settings">设置断网限值</string>
    <string name="large_net_traffic_lock_settings_summery">当前应用消耗 %1$sM 时自动断网</string>
    <string name="GlobalSettings_statusbar_nofity_title">通知栏状态显示</string>
    <string name="GlobalSettings_select_language">默认使用语言</string>
    <string name="GlobalSettings_statusbar_appearance_title">通知栏显示效果</string>
    <string name="settings_display_quick_title">显示与快捷设置</string>
    <string name="settings_quick_win_title">百度手机卫士悬浮窗设置</string>
    <string name="settings_how_to_quick_win">如何开启百度手机卫士悬浮窗</string>
    <string name="settings_quick_desk_shortcut">创建桌面快捷方式</string>
    <string name="settings_operation_title">操作设置</string>
    <string name="settings_operation_quick_install">安装/卸载应用无需系统确认</string>
    <string name="settings_operation_shake">摇一摇加速手机</string>
    <string name="settings_operation_seven_keys_add">添加百度手机卫士七键开关</string>
    <string name="settings_service_title">百度手机卫士服务设置</string>
    <string name="settings_service_ue_improve_title">用户体验改进计划</string>
</resources>